# MonacGraph

./: .gitignore  README.md  pom.xml
conf/: lsm-community.properties  lsm-graph.properties
data/: exampleEdgeProperty.csv  exampleEdgeProperty.json  exampleVertexProperty.csv  exampleVertexProperty.json  my_database.graph  new.graph
demo/: index.html  vite.config.js
demo/src/: App.vue  main.js  style.css
demo/src/components/: ConnectionDialog.vue  GraphVisualization.vue
demo/src/services/: gremlinClient.js
lsm-community/: .gitignore  Cargo.toml  README.md
lsm-community/benchmark/: Cargo.toml
lsm-community/benchmark/src/: bfs.rs  cd.rs  cs.rs  dyn.rs  wcc.rs
lsm-community/config/: example.yaml
lsm-community/cosmo/: Cargo.toml  README.md
lsm-community/cosmo/src/: algorithms.rs  comm_io.rs  config.rs  io_status.rs  lib.rs  main.rs  types.rs  util.rs
lsm-community/cosmo/src/algorithms/: analysis.rs  bfs.rs  path.rs  scc.rs  wcc.rs
lsm-community/cosmo/src/comm_io/: comm_idx.rs  csr_block.rs  scc_idx.rs  sim_csr_block.rs
lsm-community/cosmo/src/types/: graph_query.rs  graph_serialize.rs
lsm-community/lsm-community-java/: Cargo.toml
lsm-community/lsm-community-java/src/: example.rs  jni.rs  lib.rs  mapper.rs  tests.rs  wrapper.rs
lsm-community/lsm-community-java/src/tests/: test_mapper.rs
lsm-community/lsm-storage/: Cargo.toml
lsm-community/lsm-storage/src/: algorithms.rs  block.rs  bucket.rs  cache.rs  comm_io.rs  config.rs  delta.rs  external.rs  graph.rs  iterator.rs  lib.rs  mem_graph.rs  property.rs  tests.rs  types.rs  utils.rs  vertex_index.rs
lsm-community/lsm-storage/src/algorithms/: bfs.rs  comm.rs  wcc.rs
lsm-community/lsm-storage/src/block/: builder.rs  iterator.rs
lsm-community/lsm-storage/src/bucket/: bloom.rs  builder.rs  disk_manager.rs
lsm-community/lsm-storage/src/tests/: test_algorithm.rs  test_block.rs  test_bucket.rs  test_cache.rs  test_comm_io.rs  test_config.rs  test_delta.rs  test_external.rs  test_graph.rs  test_mem_graph.rs  test_property.rs  test_utils.rs  test_vertex_index.rs
lsm-community/tools/: clean.sh
scripts/: empty-sample.groovy  uploaded-graph-init.groovy
src/main/java/com/graph/rocks/: BatchImportClient.java  GroovyGremlinQueryExecutor.java  IdCodec.java  LoadClient.java  LsmEdge.java  LsmElement.java  LsmGraph.java  LsmGraphClient.java  LsmGraphServer.java  LsmGraphTest.java  LsmProperty.java  LsmTransaction.java  LsmVertex.java  LsmVertexProperty.java  Main.java  RustJNI.java  SecondOrderQueryBuilder.java  SecondOrderTraversalExtensions.java  SecondOrderTraversalSource.java  VertexSubsetQueryBuilder.java
src/main/java/com/graph/rocks/community/: CommunityEdge.java  CommunityElement.java  CommunityGraph.java  CommunityProperty.java  CommunityTransaction.java  CommunityVertex.java  CommunityVertexProperty.java
src/main/java/com/graph/rocks/example/: BatchImportClient.java  ExampleLoadClient.java  GremmunityClient.java  GremmunityServer.java  MonacGraphServer.java  SecondOrderClient.java
src/main/java/com/graph/rocks/reader/: EdgePropertyCsvReader.java  EdgePropertyJsonReader.java  VertexPropertyCsvReader.java  VertexPropertyJsonReader.java
src/main/java/com/graph/rocks/serialize/: IdCodec.java  VsetResultSerializer.java
src/main/java/com/graph/rocks/so/: BfsQueryBuilder.java  CommunityQueryBuilder.java  CommunityType.java  GroovyGremlinQueryExecutor.java  SecondOrderQueryBuilder.java  SecondOrderTraversalExtensions.java  SecondOrderTraversalSource.java  VertexSubsetQueryBuilder.java
src/main/resources/: gremlin-server.yaml
src/main/resources/scripts/: session-init.groovy
src/main/resources/storage/: platform
vue-demo/: README.md
web-client/: README.md  index.html  package-lock.json  package.json
web-client/src/: App.vue
web-client/src/components/: GraphUploader.vue  QueryEditor.vue  ResultsPanel.vue  VsetBrowser.vue
web-client/src/services/: gremlinClient.js
web-client/src/store/: graphStore.js
