[workspace]
members = [
    "lsm-storage",
    "cosmo",
    "benchmark",
    "lsm-community-java",
]
resolver = "2"

[workspace.dependencies]
lsm-storage = { path = "lsm-storage" }

anyhow = "1.0.100"
bincode = "1.3"
bytes = "1.11.0"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.3.2"
crossbeam-channel = "0.5.15"
crossbeam-skiplist = "0.1"
dashmap = "6.1.0"
farmhash = "1.1.5"
indicatif = "0.18.3"
io-uring = "0.7.11"
jni = "0.21"
libc = "0.2"
lz4 = "1.28.1"
memmap2 = "0.9.5"
moka = { version = "0.12.12", features = ["sync"] }
num_cpus = "1.16"
once_cell = "1.10.0"
parking_lot = "0.12"
rand = "0.9.2"
rayon = "1.10"
rocksdb = { version = "0.24", features = ["multi-threaded-cf"] }
rustc-hash = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34-deprecated"
serial_test = "3.0"
tempfile = "3.24.0"
tokio = { version = "1", features = ["rt", "fs", "io-util", "macros"] }
winapi = { version = "0.3", features = ["winbase", "fileapi"] }
zstd = "0.13"

[profile.test]
incremental = true

[profile.release]
incremental = true