[package]
name = "lsm-storage"
version = "0.1.0"
edition = "2024"

[lib]
name = "lsm_storage"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
crc32fast = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam-skiplist = { workspace = true }
farmhash = { workspace = true }
indicatif = { workspace = true }
lz4 = { workspace = true }
moka = { workspace = true }
num_cpus = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
rocksdb = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
zstd = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { workspace = true }
libc = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = { workspace = true }

[target.'cfg(all(unix, not(any(target_os = "linux", target_os = "macos"))))'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true }